--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
     cursor: pointer;
+
+}
+
+.row_sidebar {
+    z-index: 0;
 }
 
 .top_sidebar a {
@@ -14,7 +19,7 @@
 
 .top_sidebar li {
     width: 200px;
-    height: 45px;
+    height: 60px;
 
     list-style: none;
 }
@@ -40,7 +45,7 @@
 
 .top_sidebar {
     width: 200px;
-    height: 150px;
+    height: 100px;
     border-bottom: 1px solid #a5a5a5;
     ;
 }
@@ -93,29 +98,4 @@
 
 #yourproject a {
     text-decoration: none;
-}
-
-.addProject li{
-    list-style: none;
-}
-.addProject a{
-    font-weight: 100;
-    font-size: 14px;
-    text-decoration: none;
-    color: black;
-}
-.listHome ul{
-    margin-top: -10px;
-}
-.listHome li{
-    list-style: none;
-    width: 150px;
-    height: 40px;
-}
-
-.listHome a{
-    font-weight: 100;
-    font-size: 14px;
-    text-decoration: none;
-    color: black;
 }
