--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,12 @@
     padding: 0;
     margin: 0;
     position: relative;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
     width: 100%;
-    height: 50px;
+    height: 100%;
     background: rgb(142, 181, 231);
     color: white;
     font-weight: 700;
@@ -49,13 +50,14 @@
 
 .menu ul li>ul {
     position: absolute;
-    height: auto;
+    height: 200px;
     width: 300px;
     top: 50px;
     left: 0;
     display: none;
     background: rgb(142, 181, 231);
     border-radius: 0px 0px 10px 10px;
+    z-index: 1;
 }
 
 .menu ul li>ul li {
@@ -80,6 +82,8 @@
 
 }
 
+
+
 .fa-angle-down {
     margin-left: 5px;
 }
@@ -91,6 +95,7 @@ input {
     height: 30px;
     border-radius: 8px;
     padding-left: 30px;
+    z-index: 0;
 }
 
 .search {
@@ -100,8 +105,10 @@ input {
 
 .fa-magnifying-glass {
     position: absolute;
+
     color: black;
     padding: 7px;
+    z-index: 1;
 }
 
 .user {
@@ -124,95 +131,166 @@ i {
 
 .detail_project {
     position: absolute;
-    top: 100px;
+    top: 103px;
     left: 450px;
-
     background-color: rgb(238, 238, 238);
-    height: 500px;
-    width: 100vw;
+    height: 503px;
+    width: 70%;
     padding-left: 40px;
     padding-top: 30px;
-}
-.Project  {
-    position: absolute;
-    top: 100px;
-    left: 450px;
-
-    background-color: rgb(238, 238, 238);
-    height: 500px;
-    width: 100vw;
-    padding-left: 40px;
-    padding-top: 30px;
+    padding-right: 20px;
 }
 
-.Project tr {
-    height: 45px;
-    
-}
-.Project .sub{
-    width: 220px;
-    height: 30px;
-    margin-left: 300px;
-    margin-top: 200px;
-    border-radius: 10px;
-    border: 1px solid black;
+.detail_project h1 {
+    color: rgb(10, 10, 167);
+
 }
 
-.document {
-    position: absolute;
-    top: 100px;
-    left: 450px;
-
-    background-color:  rgb(238, 238, 238);
-    height: 500px;
-    width: 100vw;
-    padding-left: 40px;
-    padding-top: 30px;
+.detail div {
+    margin-top: 30px;
+    font-size: 20px;
+    color: rgba(10, 67, 221);
 }
 
-.tvDepartment{
-    position: absolute;
-    top: 100px;
-    left: 450px;
-
-    background-color:  rgb(238, 238, 238);
-    height: 500px;
-    width: 100vw;
-    padding-left: 40px;
-    padding-top: 30px;
+.detail button {
+    margin-top: 30px;
+    width: 200px;
 }
 
 .work_list {
     position: absolute;
-    top: 100px;
+    top: 103px;
     left: 450px;
-
     background-color: rgb(238, 238, 238);
-    height: 500px;
-    width: 100vw;
+    height: 503px;
+    width: 70%;
     padding-left: 40px;
     padding-top: 30px;
+    padding-right: 20px;
 }
 
-.themTV{
-    position: absolute;
-    top: 100px;
-    left: 450px;
-
-    background-color: rgb(238, 238, 238);
-    height: 500px;
-    width: 100vw;
-    padding-left: 40px;
-    padding-top: 30px;
+.work_list h1 {
+    margin-bottom: 20px;
 }
-.themDoc{
-    position: absolute;
-    top: 100px;
-    left: 450px;
 
+td {
+    text-align: center;
+}
+
+.title_works {
+    margin-top: 20px;
+}
+
+.title_works a {
+    text-decoration: none;
+    color: rgb(20, 160, 224);
+    font-size: 25px;
+
+}
+
+#progresss {
+    width: 500px;
+    margin-left: 20px;
+    margin-top: 30px;
+}
+
+#progress {
+    width: 100%;
+    height: 15px;
+    margin-top: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+#myProgress {
+    width: 50%;
+    height: 15px;
+    background-color: green;
+    text-align: center;
+}
+
+.home {
+    position: absolute;
+    top: 103px;
+    left: 450px;
     background-color: rgb(238, 238, 238);
-    height: 500px;
-    width: 100vw;
+    height: 503px;
+    width: 70%;
     padding-left: 40px;
     padding-top: 30px;
+    padding-right: 20px;
+}
+
+.title_home {
+    text-align: center;
+    margin-bottom: 60px;
+    color: rgb(6, 53, 92);
+}
+
+.block_text {
+    font-size: 25px;
+    margin-bottom: 30px;
+    color: rgb(18, 131, 196);
+}
+
+.task_container {
+    position: absolute;
+    top: 103px;
+    left: 450px;
+    background-color: rgb(238, 238, 238);
+    height: 503px;
+    width: 70%;
+    padding-left: 40px;
+    padding-top: 30px;
+    padding-right: 20px;
+}
+
+.row_task h2 {
+    margin-bottom: 20px;
+}
+
+.checkbox {
+    width: 20px;
+    height: 20px;
+
+}
+
+.list_task ul li {
+    list-style-type: none;
+    font-size: 20px;
+}
+
+#submit_task {
+    width: 100px;
+    margin-top: 30px;
+    padding-right: 35px;
+    background-color: gray;
+    font-weight: 700;
+}
+
+.support {
+    position: absolute;
+    top: 103px;
+    left: 450px;
+    background-color: rgb(238, 238, 238);
+    height: 503px;
+    width: 70%;
+    padding-left: 40px;
+    padding-top: 30px;
+    padding-right: 20px;
+}
+
+#textsp {
+    width: 700px;
+    height: 350px;
+    padding: 10px;
+}
+
+#submit_sp {
+    width: 100px;
+    height: 30px;
+    background-color: rgb(32, 154, 224);
+    padding-right: 40px;
+    font-weight: 700;
+    color: rgb(14, 6, 82);
 }
