--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -4,6 +4,10 @@
     cursor: pointer;
 }
 
+.row_sidebar {
+    z-index: 0;
+}
+
 .top_sidebar a {
     text-decoration: none;
     font-size: 20px;
@@ -29,6 +33,13 @@
     background-color: rgb(238, 238, 238);
     margin-left: 100px;
 
+}
+
+.row_sidebar {
+    width: 300px;
+    height: 500px;
+    padding-left: 40px;
+    padding-top: 30px;
 }
 
 .row_sidebar {
